deployment/clouddeploy/gke-workers/environments/oss-vdb-test/monitoring/grafana_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: osv-monitoring
  annotations:
    cloud.google.com/backend-config: '{"default": "grafana-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app.kubernetes.io/name: grafana
