deployment/clouddeploy/gke-workers/environments/oss-vdb-test/monitoring/grafana_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: osv-monitoring
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: grafana-managed-cert
spec:
  rules:
  - host: monitoring.osv.dev
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: grafana
            port:
              number: 3000
